--- a/SoTayCanBo/res/layout/fragment_lienhe.xml
+++ b/SoTayCanBo/res/layout/fragment_lienhe.xml
@@ -4,9 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#f8f8f9"
     android:orientation="vertical" >
 
-    <com.astuetz.pagerslidingtabstrip
+    <com.astuetz.PagerSlidingTabStrip
         android:id="@+id/pstWalletTabs"
         android:layout_width="match_parent"
         android:layout_height="48dp"
@@ -15,7 +16,7 @@
         app:pstsIndicatorHeight="0dp"
         app:pstsTextAllCaps="false" />
 
-    <ViewPager
+    <android.support.v4.view.ViewPager
         android:id="@+id/pager"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
