--- a/SoTayCanBo/res/layout/list_lich_tuan_item.xml
+++ b/SoTayCanBo/res/layout/list_lich_tuan_item.xml
@@ -8,19 +8,22 @@
     android:paddingRight="25dp"
     android:paddingTop="5dp"
     android:weightSum="2" >
-	<ImageView 
-	    android:id="@+id/ivBuoi"
-	    android:layout_gravity="center_vertical"
-	    android:layout_width="40dp"
-	    android:layout_height="40dp"
-	    android:scaleType="fitXY"
-	    android:background="@drawable/ic_morning"/>
-    <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:layout_marginLeft="10dp"
+
+    <ImageView
+        android:id="@+id/ivBuoi"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:layout_gravity="center_vertical"
+        android:background="@drawable/ic_morning"
+        android:contentDescription="@string/description"
+        android:scaleType="fitXY" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center_vertical"
+        android:layout_marginLeft="10dp"
+        android:layout_weight="1"
         android:orientation="vertical" >
 
         <TextView
@@ -29,15 +32,14 @@
             android:layout_height="wrap_content"
             android:ellipsize="end"
             android:maxLines="1"
-            android:text="Teen"
             android:textColor="@color/black"
-            android:textSize="15dp" />
+            android:textSize="15sp" />
 
         <TextView
             android:id="@+id/sukienTime"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="thời gian"
-            android:textSize="12dp" />
+            android:textSize="12sp" />
     </LinearLayout>
+
 </LinearLayout>
