--- a/SoTayCanBo/res/layout/activity_main.xml
+++ b/SoTayCanBo/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
     </LinearLayout>
 
     <ListView
-        android:id="@+id/listEvent"
+        android:id="@+id/lvEvent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" 
         android:layout_below="@+id/calendar1">
