--- a/SoTayCanBo/res/layout/activity_login_landscape.xml
+++ b/SoTayCanBo/res/layout/activity_login_landscape.xml
@@ -10,19 +10,18 @@
     tools:context="com.hou.sotaycanbo.LoginActivity" >
 
     <LinearLayout
-        android:id="@+id/linear3"
-        android:layout_width="fill_parent"
+        android:id="@+id/llAppName"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
-        android:orientation="horizontal"
-        android:paddingTop="15dp" >
+        android:orientation="horizontal" >
 
         <TextView
             android:id="@+id/logo_tv"
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="50dp"
             android:gravity="center"
+            android:padding="10dp"
             android:text="@string/login_stcb"
             android:textAllCaps="true"
             android:textColor="@color/white"
@@ -33,7 +32,10 @@
         android:id="@+id/edt_email"
         android:layout_width="match_parent"
         android:layout_height="48dp"
-        android:layout_marginTop="250dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginLeft="100dp"
+        android:layout_marginRight="100dp"
+        android:layout_below="@+id/llAppName"
         android:background="@drawable/layout_border"
         android:drawableLeft="@drawable/user_login"
         android:drawablePadding="10dp"
@@ -52,6 +54,8 @@
         android:layout_height="48dp"
         android:layout_below="@+id/edt_email"
         android:layout_marginTop="10dp"
+        android:layout_marginLeft="100dp"
+        android:layout_marginRight="100dp"
         android:background="@drawable/layout_border"
         android:drawableLeft="@drawable/password_login"
         android:drawablePadding="10dp"
@@ -68,8 +72,10 @@
         android:id="@+id/btn_login"
         android:layout_width="fill_parent"
         android:layout_height="48dp"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="48dp"
+        android:layout_below="@+id/edt_pass"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="100dp"
+        android:layout_marginRight="100dp"
         android:background="@drawable/button_bolder"
         android:gravity="center"
         android:text="@string/title_activity_login"
@@ -82,7 +88,10 @@
         android:id="@+id/tv_quenmatkhau"
         android:layout_width="fill_parent"
         android:layout_height="48dp"
-        android:layout_alignParentBottom="true"
+        android:layout_below="@+id/btn_login"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="100dp"
+        android:layout_marginRight="100dp"
         android:gravity="center"
         android:text="@string/login_quenmatkhau"
         android:textColor="@color/white"
