--- a/SoTayCanBo/res/layout/activity_canbo.xml
+++ b/SoTayCanBo/res/layout/activity_canbo.xml
@@ -26,7 +26,7 @@
                 android:layout_marginLeft="20dp"
                 android:layout_marginTop="20dp"
                 android:alpha="50"
-                android:src="@drawable/account_ava" />
+                android:src="@drawable/test1" />
 
             <TextView
                 android:id="@+id/tvUserName"
@@ -62,7 +62,7 @@
             android:orientation="vertical" >
 
             <EditText
-                android:id="@+id/edtFullName"
+                android:id="@+id/edtChucvu"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@android:color/transparent"
