--- a/SoTayCanBo/res/layout/activity_main.xml
+++ b/SoTayCanBo/res/layout/activity_main.xml
@@ -11,11 +11,23 @@
         android:orientation="vertical" >
     </LinearLayout>
 
+    <TextView
+        android:id="@+id/tvLunarDay"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/calendar1"
+        android:background="@color/white"
+        android:textColor="@color/black"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp" />
+
     <ListView
         android:id="@+id/lvEvent"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" 
-        android:layout_below="@+id/calendar1">
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/tvLunarDay" >
     </ListView>
 
 </RelativeLayout>
