--- a/SoTayCanBo/res/layout/fragment_lienhe.xml
+++ b/SoTayCanBo/res/layout/fragment_lienhe.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/apk/res/com.hou.sotaycanbo"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -14,6 +14,7 @@
         android:background="#fff"
         app:pstsIndicatorColor="#f8f8f9"
         app:pstsIndicatorHeight="0dp"
+        app:pstsTabPaddingLeftRight="5dp"
         app:pstsTextAllCaps="false" />
 
     <android.support.v4.view.ViewPager
