--- a/SoTayCanBo/res/layout/itemlist_canbo.xml
+++ b/SoTayCanBo/res/layout/itemlist_canbo.xml
@@ -19,7 +19,8 @@
         android:layout_height="wrap_content"
         android:layout_toRightOf="@+id/imgAvatar"
         android:orientation="vertical"
-        android:paddingTop="10dp" >
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp" >
 
         <TextView
             android:id="@+id/tvTencanbo"
@@ -28,6 +29,12 @@
             android:textColor="@color/black"
             android:textSize="16sp" />
 
+        <TextView
+            android:id="@+id/tvChucvu"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/black" />
+        
         <TextView
             android:id="@+id/tvEmail"
             android:layout_width="match_parent"
@@ -39,6 +46,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@color/grey" />
+        
     </LinearLayout>
 
 </RelativeLayout>
