--- a/SoTayCanBo/res/layout/list_lich_tuan_item.xml
+++ b/SoTayCanBo/res/layout/list_lich_tuan_item.xml
@@ -4,8 +4,8 @@
     android:layout_height="match_parent"
     android:orientation="horizontal"
     android:paddingBottom="5dp"
-    android:paddingLeft="25dp"
-    android:paddingRight="25dp"
+    android:paddingLeft="15dp"
+    android:paddingRight="20dp"
     android:paddingTop="5dp"
     android:weightSum="2" >
 
@@ -13,14 +13,15 @@
         android:id="@+id/ivBuoi"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:layout_gravity="center_vertical"
+        android:layout_gravity="top|left|center_horizontal"
+        android:layout_marginTop="5dp"
         android:background="@drawable/ic_morning"
         android:contentDescription="@string/description"
         android:scaleType="fitXY" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:layout_marginLeft="10dp"
         android:layout_weight="1"
@@ -28,16 +29,15 @@
 
         <TextView
             android:id="@+id/sukienTitle"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:ellipsize="end"
-            android:maxLines="1"
+            android:ellipsize="start"
             android:textColor="@color/black"
             android:textSize="15sp" />
 
         <TextView
             android:id="@+id/sukienTime"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="12sp" />
     </LinearLayout>
