--- a/SoTayCanBo/res/layout/dialog_chitiet_sukien.xml
+++ b/SoTayCanBo/res/layout/dialog_chitiet_sukien.xml
@@ -15,6 +15,7 @@
             android:orientation="vertical" >
 
             <RelativeLayout
+                android:id="@+id/rlTitle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="15dp" >
